--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>DesafioTecnicoCredishop</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta charset="utf-8" />
+    <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <title>Desafio Tecnico Credishop</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <!--IE Polyfill for CSS Elements-->
+    <!--HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries-->
+    <!--[if lt IE 9]>
+      <%= javascript_include_tag "https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js", "https://oss.maxcdn.com/respond/1.4.2/respond.min.js" %>
+    <![endif]-->
+    <!--[if lte IE 8]>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/ie8/0.8.0/ie8.js"></script>
+    <![endif]-->
   </head>
-
   <body>
-    <%= yield %>
+    <main class="container-fluid px-3 py-3" role="main">
+      <%= flash_messages %>
+      <%= yield %>
+    </main>
   </body>
 </html>
