--- a/app/views/proponentes/_form.html.erb
+++ b/app/views/proponentes/_form.html.erb
@@ -1,24 +1,30 @@
+<%= simple_form_for(@proponente, remote: true) do |f| %>
+  <div class="modal-body">
+    <%= errors_for(@proponente) %>
 
-<%= simple_form_for(@proponente) do |f| %>
-  <%= errors_for(@proponente) %>
 
-  <div class="form-inputs">
-    <%= f.input :nome %>
-    <%= f.input :cpf %>
-    <%= f.input :data_nascimento %>
-    <%= f.input :logradouro %>
-    <%= f.input :numero %>
-    <%= f.input :bairro %>
-    <%= f.input :cidade %>
-    <%= f.input :estado %>
-    <%= f.input :cep %>
-    <%= f.input :telefone_pessoal %>
-    <%= f.input :telefone_referencia %>
-    <%= f.input :salario %>
-  </div>
-  <p>Desconto INSS: <span id="desconto-inss"></span></p>
+    <div class="form-inputs">
+      <%= f.input :nome %>
+      <%= f.input :cpf %>
+      <%= f.input :data_nascimento %>
+      <%= f.input :logradouro %>
+      <%= f.input :numero %>
+      <%= f.input :bairro %>
+      <%= f.input :cidade %>
+      <%= f.input :estado %>
+      <%= f.input :cep %>
+      <%= f.input :telefone_pessoal %>
+      <%= f.input :telefone_referencia %>
+      <%= f.input :salario %>
+    </div>
+    <p>Desconto INSS: <span id="desconto-inss"></span></p>
 
-  <div class="form-actions">
-    <%= f.button :submit, class: 'btn-primary' %>
+
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <div class="form-actions">
+          <%= f.button :submit, class: 'btn btn-primary' %>
+        </div>
+      </div>
   </div>
 <% end %>
