--- a/app/views/proponentes/relatorio_funcionarios.html.erb
+++ b/app/views/proponentes/relatorio_funcionarios.html.erb
@@ -1,10 +1,12 @@
+<%= link_to 'Back', proponentes_path %>
+
 <h1>Relatório de Funcionários</h1>
 
 <h2>Gráfico de Funcionários por Faixa Salarial</h2>
 <%= column_chart @funcionarios_por_faixa %>
 
 <h2>Listagem de Funcionários por Faixa Salarial</h2>
-<table>
+<table class="table table-striped table-hover table-sm">
   <thead>
     <tr>
       <th>Faixa Salarial</th>
