fix calculo, add desconto inss, fix job

--- a/app/views/proponentes/_form.html.erb
+++ b/app/views/proponentes/_form.html.erb
@@ -16,8 +16,8 @@
       <%= f.input :telefone_pessoal %>
       <%= f.input :telefone_referencia %>
       <%= f.input :salario %>
+      <%= f.input :desconto_inss, disabled: true %>
     </div>
-    <p>Desconto INSS: <span id="desconto-inss"></span></p>
 
 
       <div class="modal-footer">
