--- a/app/views/proponentes/show.html.erb
+++ b/app/views/proponentes/show.html.erb
@@ -25,6 +25,8 @@
   <dd><%= @proponente.telefone_referencia %></dd>
   <dt>Salario:</dt>
   <dd><%= @proponente.salario %></dd>
+  <dt>Desconto INSS:</dt>
+  <dd><%= @proponente.desconto_inss %></dd>
 </dl>
 <%= link_to 'Edit', edit_proponente_path(@proponente) %> |
 <%= link_to 'Back', proponentes_path %>
