--- a/app/views/proponentes/index.html.erb
+++ b/app/views/proponentes/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Proponentes</h1>
 
 <table class="table table-striped table-hover table-sm">
-  <thead>
+  <thead class="thead-dark">
     <tr>
       <th scope="col">Nome</th>
       <th scope="col">Cpf</th>
