--- a/app/views/proponentes/index.html.erb
+++ b/app/views/proponentes/index.html.erb
@@ -19,24 +19,9 @@
     </tr>
   </thead>
 
-  <tbody>
+  <tbody id="proponentesTable">
     <% @proponentes.each do |proponente| %>
-      <tr>
-        <td><%= proponente.nome %></td>
-        <td><%= proponente.cpf %></td>
-        <td><%= proponente.data_nascimento %></td>
-        <td><%= proponente.logradouro %></td>
-        <td><%= proponente.numero %></td>
-        <td><%= proponente.bairro %></td>
-        <td><%= proponente.cidade %></td>
-        <td><%= proponente.estado %></td>
-        <td><%= proponente.cep %></td>
-        <td><%= proponente.telefone_pessoal %></td>
-        <td><%= proponente.telefone_referencia %></td>
-        <td><%= proponente.salario %></td>
-        <td><%= link_to 'Editar', edit_proponente_path(proponente), data: {bs_toggle: 'modal', bs_target: '#newPorponenteModal', remote: true } %></td>
-        <td><%= link_to 'Deletar', proponente, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <%= render "proponente_row", proponente: proponente %>
     <% end %>
   </tbody>
 </table>
