--- a/app/views/proponentes/index.html.erb
+++ b/app/views/proponentes/index.html.erb
@@ -34,9 +34,9 @@
 
 
 <br>
-<%= link_to 'Novo Proponente', new_proponente_path, class: "btn btn-primary btn-lg mb-4", data: {bs_toggle: 'modal', bs_target: '#newPorponenteModal', remote: true } %>
+<%= link_to 'Novo Proponente', new_proponente_path, class: "btn btn-primary btn-lg", data: {bs_toggle: 'modal', bs_target: '#newPorponenteModal', remote: true } %>
 
-<%= link_to "Relatório de Funcionários", relatorio_funcionarios_proponentes_path, class: "btn btn-primary btn-lg mb-4", data: {bs_toggle: 'modal', bs_target: '#reportModal', remote: true } %>
+<%= link_to "Relatório de Funcionários", relatorio_funcionarios_proponentes_path, class: "btn btn-primary btn-lg", data: {bs_toggle: 'modal', bs_target: '#reportModal', remote: true } %>
 
 
 <!-- Modal -->
