--- a/app/views/proponentes/_proponente_row.html.erb
+++ b/app/views/proponentes/_proponente_row.html.erb
@@ -12,5 +12,5 @@
   <td><%= proponente.telefone_referencia %></td>
   <td><%= proponente.salario %></td>
   <td><%= link_to 'Editar', edit_proponente_path(proponente), data: {bs_toggle: 'modal', bs_target: '#newPorponenteModal', remote: true } %></td>
-  <td><%= link_to 'Deletar', proponente, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  <td><%= link_to 'Deletar', proponente, method: :delete, data: { confirm: 'Are you sure?', remote: true } %></td>
 </tr>
