--- a/app/views/proponentes/index.html.erb
+++ b/app/views/proponentes/index.html.erb
@@ -15,6 +15,7 @@
       <th scope="col">Telefone pessoal</th>
       <th scope="col">Telefone referencia</th>
       <th scope="col">Salario</th>
+      <th scope="col">Desconto INSS</th>
       <th colspan="3" scope="col"></th>
     </tr>
   </thead>
